--- a/ProMad.html
+++ b/ProMad.html
@@ -149,7 +149,7 @@
     <title>ProMad</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/ProMad/W3.css"> <!-- localização do .css -->
+    <link rel="stylesheet" href="//ProMad/W3.css"> <!-- localização do .css -->
     <script>
         // Script para adicionar a classe "active" ao item clicado
         document.addEventListener('DOMContentLoaded', function () {
