--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <title>ProMad</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/ProMad/W3.css"> <!-- localização do .css -->
+    <link rel="stylesheet" href="/W3.css"> <!-- localização do .css -->
     <script>
         // Script para adicionar a classe "active" ao item clicado
         document.addEventListener('DOMContentLoaded', function () {
@@ -183,7 +183,7 @@
     <!-- Header -->
 
     <header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
-        <img class="w3-image" src="/ProMad/header.jpg" alt="Architecture"><!-- localização da foto do header -->
+        <img class="w3-image" src="/header.jpg" alt="Architecture"><!-- localização da foto do header -->
         <div class="w3-display-middle w3-margin-top w3-center">
             <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>PROMAD</b></span> <span class="w3-hide-small w3-text-light-grey"></span></h1>
         </div>
@@ -215,19 +215,19 @@
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escadas Retas</div>
-                    <img src="/ProMad/escadareta.png" alt="House">
+                    <img src="/escadareta.png" alt="House">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escada Reta com corrimão</div>
-                    <img src="/ProMad/escadaretacorrimao.png" alt="House">
+                    <img src="/escadaretacorrimao.png" alt="House">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escada em L</div>
-                    <img src="/ProMad/escadaL.png" alt="House">
+                    <img src="/escadaL.png" alt="House">
                 </div>
             </div>
         </div>
@@ -236,19 +236,19 @@
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escada em U</div>
-                    <img src="/ProMad/escadaU.png" alt="House">
+                    <img src="/escadaU.png" alt="House">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escada em U com corrimão</div>
-                    <img src="/ProMad/escadaUcorrimao.png" alt="House">
+                    <img src="/escadaUcorrimao.png" alt="House">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container image-container">
                     <div class="w3-display-topleft w3-black w3-padding">Escada com Resguardo</div>
-                    <img src="/ProMad/escadaResguardo.png" alt="House">
+                    <img src="/escadaResguardo.png" alt="House">
                 </div>
             </div>
         </div>
