--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <a href="#home" class="w3-bar-item w3-button promad-brand"><b>ProMad</b></a>
             <!-- Links flutuando à direita, escondidos em telas pequenas -->
             <div class="w3-right w3-hide-small">
-                <a href="#about" class="w3-bar-item w3-button">Sobre Nós</a>
+                <a href="#about" class="w3-bar-item w3-button">Quem somos</a>
                 <a href="#projects" class="w3-bar-item w3-button">Produtos</a>
                 <a href="#contactar" class="w3-bar-item w3-button">Contactos</a>
             </div>
@@ -210,12 +210,12 @@
 
         <!-- Sobre Nós -->
         <div class="w3-container w3-padding-32 section-anchor" id="about">
-            <h3 class="main-title">Sobre Nós</h3>
+            <h3 class="main-title">Quem somos</h3>
             <p>Bem-vindo à ProMad, o seu destino de confiança para escadas de alta qualidade e design impecável.</p>
             <p>Especializados exclusivamente na criação de escadas, dedicamo-nos a transformar espaços com soluções que combinam funcionalidade,</p>
             <p>segurança e estética refinada.</p>
-            <h3 class="secondary-title">Nossa História</h3>
-            <p>Fundada em [Ano de Fundação], a ProMad surgiu da paixão pela arte da carpintaria e do desejo de criar peças que não apenas conectam andares,mas também se destacam como elementos de design sofisticados.</p>
+            <h3 class="secondary-title">A Nossa História</h3>
+            <p>Fundada em 2020, a ProMad surgiu da paixão pela arte da carpintaria e do desejo de criar peças que não apenas conectam andares,mas também se destacam como elementos de design sofisticados.</p>
             <p>Com anos de experiência no setor, nossa equipe é composta por artesãos habilidosos que compartilham um compromisso inabalável com a excelência.</p>
             <h3 class="secondary-title">Nossa Missão</h3>
             <p>A nossa missão é projetar e construir escadas que superem as expectativas dos nossos clientes. Cada projeto é uma oportunidade para inovar e personalizar, garantindo que cada escada seja única e adequada ao estilo e às necessidades de cada cliente.</p>
@@ -272,12 +272,13 @@
         <!-- Contact Section -->
         <div class="w3-container w3-padding-32 section-anchor" id="contactar">
             <h3 class="main-title">Contactos</h3>
-            <p>Estamos sempre prontos para ouvir suas ideias e transformar seus sonhos em realidade.</p>
-            <p>Se está planeando uma nova construção ou renovar o seu espaço atual, a ProMad está aqui para ajudar.</p>
+            <p>Estamos sempre prontos para ouvir as suas ideias e transformar os seus sonhos em realidade.</p>
+            <p>Se está a pensar numa nova construção ou renovar o seu espaço atual, a ProMad está aqui para ajudar.</p>
             <p>Entre em contato conosco para um orçamento gratuito e descubra como podemos criar a escada perfeita.</p>
             <form action="/action_page.php" target="_blank">
                 <input class="w3-input w3-border" type="text" placeholder="Nome" required name="Nome">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+                <input class="w3-input w3-section w3-border" type="text" placeholder="Telefone" required name="Telefone">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Assunto" required name="Assunto">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Comentário" required name="Comentário">
                 <button class="w3-button w3-black w3-section" type="submit">
